SERVER-32903 Ambiguous field name error should be ignored during initial sync

create mode 100644 jstests/replsets/initial_sync_ambiguous_index.js

(cherry picked from commit 3423ca586b88566857f3fcdfeca1c6fdee7a0911)